force-app/main/default/objects/Teacher_Subject_Class__c/Teacher_Subject_Class__c.object-meta.xml
<CustomObject>
    <description>Maps teacher to class and subject they teach</description>
    <label>Teacher Subject Class</label>
    <nameField>
        <displayFormat>TSC-{000}</displayFormat>
        <label>Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teacher Subject Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>