force-app/main/default/objects/Teacher_Subject_Class__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Class in which the subject is taught</description>
    <inlineHelpText>Select the class to which this subject-teacher mapping applies.</inlineHelpText>
    <label>Class</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Teacher Subject Classes</relationshipLabel>
    <relationshipName>Teacher_Subject_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>