force-app/main/default/objects/Teacher_Subject_Class__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Subject taught by the teacher</description>
    <inlineHelpText>Select the subject taught by the teacher for the selected class.</inlineHelpText>
    <label>Subject</label>
    <referenceTo>Subject__c</referenceTo>
    <relationshipLabel>Teacher Subject Classes</relationshipLabel>
    <relationshipName>Teacher_Subject_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>