force-app/main/default/objects/Teacher_Subject_Class__c/fields/Teacher__c.field-meta.xml
<CustomField>
    <fullName>Teacher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Teacher assigned to teach the subject</description>
    <inlineHelpText>Select the teacher who teaches the subject for this class.</inlineHelpText>
    <label>Teacher</label>
    <referenceTo>Teacher__c</referenceTo>
    <relationshipLabel>Teacher Subject Classes</relationshipLabel>
    <relationshipName>Teacher_Subject_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>